Quick fix for the new LogicBoolean type.